fix footer and subscription bg.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <title>New Year Landing Page</title>
   </head>
-  <body class="bg-slate-500 font-inter text-[#070211]">
+  <body class="bg-white font-inter text-[#070211]">
     <!--header start-->
     <header
       class="container mx-auto rounded-2xl my-4 sm:my-6 md:my-8 lg:my-10 xl:my-12 relative"
@@ -280,7 +280,7 @@
     <!--portfolio end-->
     <!--subscription start-->
     <section class="container mx-auto py-4 sm:py-6 md:py-8 lg:py-10 xl:py-12">
-      <div class=" bg-[#ff000005] max-[500px]:py-4 py-6 sm:py-7 md:py-8 lg:py-10">
+      <div class=" bg-[#ff000011] max-[500px]:py-4 py-6 sm:py-7 md:py-8 lg:py-10 rounded-2xl">
         <div class="w-[70%] h-[80%] mx-auto flex flex-col justify-center items-center max-[500px]:py-4 py-6 sm:py-7 md:py-8 lg:py-10 space-y-2">
           <img src="/resources/Group 61.png" alt="email-image">
           <div class="flex flex-col justify-center items-center space-y-2">
@@ -298,7 +298,7 @@
     </section>
     <!--subscription end-->
     <!--footer start-->
-    <footer class=" my-4 sm:my-6 md:my-8 lg:my-10 xl:my-12 bg-[#070211]">
+    <footer class=" mt-4 sm:mt-6 md:mt-8 lg:mt-10 xl:mt-12 bg-[#070211]">
       <div class="container mx-auto text-[#fff] max-[500px]:py-4 py-6 sm:py-7 md:py-8 lg:py-10 px-4">
         <div class="flex max-[640px]:flex-col space-y-3 justify-between items-center border-b border-[#ffffff15] max-[500px]:pb-4 pb-6 sm:pb-7 md:pb-8 lg:pb-10">
           <div class="">
@@ -311,7 +311,7 @@
             <a class="font-normal md:font-medium text-lg md:text-2xl" href="www.website.com">www.website.com</a>
           </div>
         </div>
-        <div class="flex justify-center items-center border-b border-[#ffffff15] max-[500px]:pb-4 pb-6 sm:pb-7 md:pb-8 lg:pb-10 my-2 sm:my-3 md:my-4 lg:my-5">
+        <div class="flex justify-center items-center border-b border-[#ffffff15] max-[500px]:pb-4 pb-6 sm:pb-7 md:pb-8 lg:pb-10 my-2 sm:my-3 md:my-4 lg:my-5 space-x-1">
           <a href="www.facebook.com">
             <img src="/resources/Group 85.png" alt="facebook-logo">
           </a>
